objects/X11_Case_Metadata_Type__c.object
<CustomObject>
    <fields>
        <fullName>Available_for_Portal_User__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Available for Portal User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Configuration_Link_Field__c</fullName>
        <description>USed for Data migration</description>
        <externalId>true</externalId>
        <label>Case Configuration Link Field</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Priority__c</fullName>
        <label>Default Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Record_Type__c</fullName>
        <label>Case Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Street</fullName>
                </value>
                <value>
                    <fullName>Parking</fullName>
                </value>
                <value>
                    <fullName>Public Records Request</fullName>
                </value>
                <value>
                    <fullName>Non-Stormwater Discharges</fullName>
                </value>
                <value>
                    <fullName>Buoys and Nav Aids</fullName>
                </value>
                <value>
                    <fullName>Dead Animal</fullName>
                </value>
                <value>
                    <fullName>Sidewalks</fullName>
                </value>
                <value>
                    <fullName>Pier</fullName>
                </value>
                <value>
                    <fullName>Graffiti</fullName>
                </value>
                <value>
                    <fullName>Broken Parking Meter</fullName>
                </value>
                <value>
                    <fullName>Floating Debris</fullName>
                </value>
                <value>
                    <fullName>Irrigation</fullName>
                </value>
                <value>
                    <fullName>PRA Request</fullName>
                </value>
                <value>
                    <fullName>Storm Damage</fullName>
                </value>
                <value>
                    <fullName>Street Lights</fullName>
                </value>
                <value>
                    <fullName>Vegetation</fullName>
                </value>
                <value>
                    <fullName>Facilities and Equipment</fullName>
                </value>
                <value>
                    <fullName>Traffic Lights Out</fullName>
                </value>
                <value>
                    <fullName>Illegal Dumping</fullName>
                </value>
                <value>
                    <fullName>Homeless Encampment</fullName>
                </value>
                <value>
                    <fullName>Pothole</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Required_Fields__c</fullName>
        <label>Case Required Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Case_Subtypes__c</fullName>
        <label>Case Sub-types</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Case_UX_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lights Out</fullName>
                </value>
                <value>
                    <fullName>Material Type {Other}</fullName>
                </value>
                <value>
                    <fullName>Material Type {Hazmat}</fullName>
                </value>
                <value>
                    <fullName>Branch Down</fullName>
                </value>
                <value>
                    <fullName>Obscuring Signage/Signals</fullName>
                </value>
                <value>
                    <fullName>Unstable</fullName>
                </value>
                <value>
                    <fullName>Cutting Boards</fullName>
                </value>
                <value>
                    <fullName>Pier Planks</fullName>
                </value>
                <value>
                    <fullName>Railing/Other Structural Issue</fullName>
                </value>
                <value>
                    <fullName>Wildlife Excrement</fullName>
                </value>
                <value>
                    <fullName>Benches/Tables</fullName>
                </value>
                <value>
                    <fullName>Drinking fountains</fullName>
                </value>
                <value>
                    <fullName>Sports area</fullName>
                </value>
                <value>
                    <fullName>Playground</fullName>
                </value>
                <value>
                    <fullName>Restrooms</fullName>
                </value>
                <value>
                    <fullName>Broken Sprinkler</fullName>
                </value>
                <value>
                    <fullName>Leak/Over Irrigation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Homeless Encampment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <label>Case Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Graffiti</fullName>
                </value>
                <value>
                    <fullName>Potholes</fullName>
                </value>
                <value>
                    <fullName>Broken Parking Meter</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Public Records Request</fullName>
                </value>
                <value>
                    <fullName>Dead Animal</fullName>
                </value>
                <value>
                    <fullName>Vegetation</fullName>
                </value>
                <value>
                    <fullName>Irrigation</fullName>
                </value>
                <value>
                    <fullName>Floating Debris</fullName>
                </value>
                <value>
                    <fullName>Street Lights</fullName>
                </value>
                <value>
                    <fullName>Paths and Walkways</fullName>
                </value>
                <value>
                    <fullName>Buoys and Navigational Aids</fullName>
                </value>
                <value>
                    <fullName>Pier</fullName>
                </value>
                <value>
                    <fullName>Illegal Discharge</fullName>
                </value>
                <value>
                    <fullName>Oil Spills/Slicks</fullName>
                </value>
                <value>
                    <fullName>Sewage</fullName>
                </value>
                <value>
                    <fullName>Illegal Maintenance Activity</fullName>
                </value>
                <value>
                    <fullName>Flooded Storm Drain</fullName>
                </value>
                <value>
                    <fullName>Wind Damage</fullName>
                </value>
                <value>
                    <fullName>Storm Damage</fullName>
                </value>
                <value>
                    <fullName>General Parking Question</fullName>
                </value>
                <value>
                    <fullName>Other Parking Issues</fullName>
                </value>
                <value>
                    <fullName>Non-Stormwater Discharges</fullName>
                </value>
                <value>
                    <fullName>Sidewalks</fullName>
                </value>
                <value>
                    <fullName>Facilities and Equipment</fullName>
                </value>
                <value>
                    <fullName>Traffic Lights Out</fullName>
                </value>
                <value>
                    <fullName>Illegal Dumping and Litter</fullName>
                </value>
                <value>
                    <fullName>Homeless Encampment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_UX_Category__c</fullName>
        <label>UX Group</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Trash and Maintenance</fullName>
                </value>
                <value>
                    <fullName>Graffiti</fullName>
                </value>
                <value>
                    <fullName>Illegal Dumping</fullName>
                </value>
                <value>
                    <fullName>Parking</fullName>
                </value>
                <value>
                    <fullName>Private Property, Buildings &amp; Construction</fullName>
                </value>
                <value>
                    <fullName>Trash Collection, Recycling &amp; Graffiti</fullName>
                </value>
                <value>
                    <fullName>Streets, Sidewalks &amp; Lights</fullName>
                    <label>Streets, Sidewalks, and Lights</label>
                </value>
                <value>
                    <fullName>Trees &amp; Vegetation</fullName>
                </value>
                <value>
                    <fullName>Water, Sewer &amp; Drains</fullName>
                </value>
                <value>
                    <fullName>Passport Services</fullName>
                </value>
                <value>
                    <fullName>Public Records Request</fullName>
                </value>
                <value>
                    <fullName>Pier and Bay</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>Storm Damage</fullName>
                </value>
                <value>
                    <fullName>Facilities and Equipment</fullName>
                </value>
                <value>
                    <fullName>Non-Stormwater Discharges</fullName>
                </value>
                <value>
                    <fullName>Traffic Lights Out</fullName>
                </value>
                <value>
                    <fullName>Homeless Encampment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_UX_Description__c</fullName>
        <label>UX Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_UX_Estimation__c</fullName>
        <label>Estimated Resolution Time</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_UX_Popular_Types__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Popular Case Type?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_UX_Type__c</fullName>
        <label>Case UX Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Car driving by a pothole on the street</fullName>
                </value>
                <value>
                    <fullName>Oversized Vehicles</fullName>
                </value>
                <value>
                    <fullName>Zone Issue</fullName>
                </value>
                <value>
                    <fullName>Quality of Life</fullName>
                </value>
                <value>
                    <fullName>Illegal Use or Activity</fullName>
                </value>
                <value>
                    <fullName>Safety Risk</fullName>
                </value>
                <value>
                    <fullName>Illegal Construction</fullName>
                </value>
                <value>
                    <fullName>Trash Collection Services</fullName>
                </value>
                <value>
                    <fullName>Appointments</fullName>
                </value>
                <value>
                    <fullName>Report</fullName>
                </value>
                <value>
                    <fullName>Curb</fullName>
                </value>
                <value>
                    <fullName>Pothole</fullName>
                </value>
                <value>
                    <fullName>Sidewalk Repair</fullName>
                </value>
                <value>
                    <fullName>Street Light</fullName>
                </value>
                <value>
                    <fullName>Traffic Sign</fullName>
                </value>
                <value>
                    <fullName>Traffic Signal</fullName>
                </value>
                <value>
                    <fullName>Damaged Guardrail</fullName>
                </value>
                <value>
                    <fullName>Faded Striping</fullName>
                </value>
                <value>
                    <fullName>Street Sweeping</fullName>
                </value>
                <value>
                    <fullName>Other street, sidewalk, and light related issue</fullName>
                </value>
                <value>
                    <fullName>Tree Maintenance</fullName>
                </value>
                <value>
                    <fullName>Storm Drain</fullName>
                </value>
                <value>
                    <fullName>Street Flooded</fullName>
                </value>
                <value>
                    <fullName>Illegal Discharge</fullName>
                </value>
                <value>
                    <fullName>Over Irrigation</fullName>
                </value>
                <value>
                    <fullName>Schedule an Appointment for a Passport</fullName>
                </value>
                <value>
                    <fullName>Graffiti</fullName>
                </value>
                <value>
                    <fullName>72 Hour Violation</fullName>
                </value>
                <value>
                    <fullName>PRA</fullName>
                </value>
                <value>
                    <fullName>Public Records Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Condition_Field_Value__c</fullName>
        <label>Condition Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Condition_Field__c</fullName>
        <label>Condition Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Condition_Operator__c</fullName>
        <label>Condition Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>=</fullName>
                </value>
                <value>
                    <fullName>&lt;&gt;</fullName>
                </value>
                <value>
                    <fullName>In</fullName>
                </value>
                <value>
                    <fullName>Not In</fullName>
                </value>
                <value>
                    <fullName>Like</fullName>
                </value>
                <value>
                    <fullName>Not Like</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Display_Action_Taken__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Action Taken</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_on_Web__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display on Web?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duplicate_Radious_Miles__c</fullName>
        <formula>X11_Radius_for_Duplicate_Check__c/5280</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duplicate Radious Miles</label>
        <precision>18</precision>
        <scale>18</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_days_orange__c</fullName>
        <label>No of days orange</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_days_red__c</fullName>
        <label>No of days red</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Picture_Path__c</fullName>
        <label>Picture Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picture__c</fullName>
        <formula>IMAGE(Picture_Path__c, &quot;Product Image&quot;, 100, 100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Picture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence_on_portal__c</fullName>
        <label>Sequence on portal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X11_Anonymous_Reporting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to control whether anonymous reporting will be allowed for a particular type of case.</description>
        <label>Anonymous Reporting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X11_Case_Status__c</fullName>
        <label>Case Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Closed - Referred</fullName>
                </value>
                <value>
                    <fullName>Pending Work</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X11_Field_Set_To_Display__c</fullName>
        <description>This field is used to store the value of the field set which will be displayed for a particular type of case.</description>
        <label>Field Set To Display</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X11_Radius_for_Duplicate_Check__c</fullName>
        <label>Radius for Duplicate Check</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Case Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Case_Record_Type__c</columns>
        <columns>NAME</columns>
        <columns>Display_on_Web__c</columns>
        <columns>Available_for_Portal_User__c</columns>
        <columns>Sequence_on_portal__c</columns>
        <columns>X11_Anonymous_Reporting__c</columns>
        <columns>Case_UX_Category__c</columns>
        <columns>Case_UX_Type__c</columns>
        <columns>Case_UX_Description__c</columns>
        <columns>Case_UX_Estimation__c</columns>
        <columns>Case_UX_Popular_Types__c</columns>
        <columns>X11_Radius_for_Duplicate_Check__c</columns>
        <columns>Duplicate_Radious_Miles__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CM-{0000}</displayFormat>
        <label>Case Metadata Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>